app/bg deployment/namespace.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: primary-deployment
  labels:
    name: primary-deployment

---
kind: Namespace
apiVersion: v1
metadata:
  name: canary-deployment
  labels:
    name: canary-deployment
