app/bg deployment/primary-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: primary-deployment
spec:
  replicas: 3  # Adjust the number of replicas as per your requirement
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-app
        image: nginx:v1
        ports:
        - containerPort: 8080  # Assuming your app listens on port 8080
